--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>¿Se acentúa gráficamente?</h1>
+        <h1>Piensa en una palabra y este programa te dirá si se acentúa gráficamente o no.</h1>
         <div id="question"></div>
         <div id="options"></div>
     </div>
