--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         }
         
         body {
-            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
-            min-height: 100vh;
+            background: linear-gradient(135deg, #e0c3fc 0%, #8ec5fc 100%);            min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
