--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         }
         
         body {
-            background: linear-gradient(135deg, #e0c3fc 0%, #8ec5fc 100%);            min-height: 100vh;
+            background: linear-gradient(135deg, #f0e6ff 0%, #e1ebff 100%);            
+            min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
