--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         siBtn.addEventListener('click', () => {
             switch (estado) {
                 case 0:
-                    mostrarResultado("Descomponga la palabra en los dos constituyentes y aplique este algoritmo a cada uno de ellos.");
+                    mostrarResultado("Descompone la palabra en los dos constituyentes y aplica este algoritmo a cada uno de ellos.");
                     break;
                 case 1:
                     mostrarResultado("La palabra se escribe con acento en la vocal cerrada tónica");
