--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, ##d4fc79 0%, #2575fc 100%);
+            background: linear-gradient(135deg, #e6f7e1 0%, #2575fc 100%);
             min-height: 100vh;
             display: flex;
             flex-direction: column;
