--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <body>
     <div class="container">
         <h1>Acentuación gráfica en español</h1>
-        <h2>Sobre leyes generales de acentuación</h2>
+        <h2 style="margin-bottom: 1.5em">Sobre leyes generales de acentuación</h2>
         <div id="presentacion">Piensa una palabra y este programa te dirá si se escribe con o sin acento gráfico.</div>
         
         <div id="question"></div>
