--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </div>
     
     <div class="footer">
-        <p>Creado por Domingo Román M. en lenguaje C corregido por DeepSeek 3.1. Traducido a JavaScript también por DeepSeek.</p>
+        <p>Creado por Domingo Román Montes de Oca en lenguaje C, corregido por DeepSeek 3.1 y traducido a JavaScript también por DeepSeek.</p>
     </div>
 
     <script>
